Post collpase Rio Grande do Sul content

--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3518,6 +3518,8 @@ early_republican_coup_title;Question the Monarchy;;;;;;;;;;;;;x
 early_republican_coup_desc;Our prince is too young to rule.\n \nAnd with no viable alternatives among the heirs, the people grow increasingly restless, and there are whispers of rebellions. Perhaps this is a telling sign that the monarchy's time has passed.;;;;;;;;;;;;;x
 claim_provincia_cisplatina_title;Claim the Cisplatina Province;;;;;;;;;;;;;x
 claim_provincia_cisplatina_desc;Uruguay, once called Cisplatina, is rightfully land of ours. Now the rebels in the south have been defeated, we can press our claims further north.;;;;;;;;;;;;;x
+claim_provincia_cisplatina_rgs_title;Claim the Cisplatina Province;;;;;;;;;;;;;x
+claim_provincia_cisplatina_rgs_desc;Uruguay, once called Cisplatina, was a fellow brazilian state decades ago. It's only natural that we can press our claims further north.;;;;;;;;;;;;;x
 cisplatina_is_ours_title;Cisplatina is ours!;;;;;;;;;;;;;x
 cisplatina_is_ours_desc;We've secured our land back! Our south frontier is what it was once before.;;;;;;;;;;;;;x
 claim_paraguay_title;Take over Paraguay;;;;;;;;;;;;;x
@@ -3547,3 +3549,5 @@ reform_ceq_desc;With the entire region under our sphere, it's possible to revive
 relinquished_brazil;Relinquished the brazilian hereditary;;;;;;;;;;;;;;x
 claim_grao_para_title;Integrate Grão Para;;;;;;;;;;;;;x
 claim_grao_para_desc;The old province of Grão Para is a fellow former brazilian state and share lots of cultural traits with us, it's only natural for us to expand our influence east.;;;;;;;;;;;;;;x
+unify_the_south_title;Unify the Southern States;;;;;;;;;;;;;;x
+unify_the_south_desc;With our current position of power, and the entire region under our control, we can unite our region under our banner and common cultural roots, becoming the true home of the brazilian gaucho!;;;;;;;;;;;;;;x
