proper republican coup

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -878,6 +878,10 @@ EVTOPTA8012;The times, they are a-changing;;;;;;;;;;;;;x
 EVTDESC8013;Being a constitutional monarch, our Emperor Dom Pedro II has quite a lot of time to travel the world and meet the many personalities therein. With his daughter Isabel at home as his regent, Dom Pedro is able to visit Egypt, Britain, Austria and France, speaking with intellectuals and even ordinary people. He always demands that he is treated as just a man, and not an emperor, and he has gained considerable fame overseas.;;;;;;;;;;;;;x
 EVTNAME8013;Dom Pedro's Travels;;;;;;;;;;;;;x
 EVTOPTA8013;A truly worldly man.;;;;;;;;;;;;;x
+EVTNAME8016;Republican Revolution?;;;;;;;;;;;;;
+EVTDESC8016;The end of slavery had resulted in an explicit shift of support to republicanism by rich and powerful coffee farmers who held great political, economic and social power in the country. To avert a republican backlash, the government adopted a series of credit and military policies and reforms to appease the land owners. The measures made by the government alarmed the civilian republicans and the Positivists in the military corps. They saw that it would undercut support for their own aims, and were emboldened to further action. For them, it had become a case of ‘now or never’. Although there was no desire in Brazil among the majority of the population to change the form of government, the civilian republicans began pressuring the Positivist officers to overthrow the monarchy. The Positivists launched a coup d’état and tried to institute a republic on November 15, 1889. During the whole ordeal Pedro II showed no emotion, as if unconcerned about the outcome. He only commented:;;;;;;;;;;;;;x
+EVTOPTA8016;If this is how it is, I will retire. I worked too much and I’m tired. Now I’ll rest.;;;;;;;;;;;;;x
+EVTOPTB8016;Crush the rebellion!;;;;;;;;;;;;;x
 EVTNAME8100;Farrapos pushed back!;;;;;;;;;;;;;x
 EVTDESC8100;Our army managed to push back the farraupilha army and secure our land back! Another triumph standing as a testament to the unyielding commitment and sacrifice of our soldiers.;;;;;;;;;;;;;x
 EVTOPTA8100;This land is rightfully ours!;;;;;;;;;;;;;x
@@ -964,11 +968,12 @@ EVTOPTA8167;This is truly a terrible blow to the nation as a whole.;;;;;;;;;;;;;
 EVTNAME8170;The end of Brazil.;;;;;;;;;;;;;x
 EVTDESC8170;The country is in shambles.\n\nRevolt after revolt, bad decision after bad decision, the brasilian state got weaker and weaker, the people are restless and distrustful of the government.\n\nThe dreams of a brasilian great power are slowly fading away, maybe it was never meant to be, maybe we should follow the steps of our colonial cousins in the rest of south america and leave behind the idea of a united brasilian state.;;;;;;;;;;;;;x
 EVTOPTA8170;We are brasilians, we will stay as brasilians!;;;;;;;;;;;;;x
-EVTOPTB8170;Reorganize the government around our central cores, we can still salvage this country.;;;;;;;;;;;;;x
-EVTOPTC8170;So be it. Brazil will be no more.;;;;;;;;;;;;;x
 EVTNAME8171;The end of Brazil.;;;;;;;;;;;;;x
 EVTDESC8171;The dream of a united brasilian state is no more. The government failed to secure the country's goals, safe keep it's borders and, the most important, maintain the national identity together.\n\nThe dream of a great power brasilian state is now gone, it's over.;;;;;;;;;;;;;x
 EVTOPTA8171;Maybe we will arise again one day...;;;;;;;;;;;;;x
+EVTNAME8172;The end of Brazil.;;;;;;;;;;;;;x
+EVTDESC8172;There's no escape now. \n\n We tried our best to salvage the country, but it was just too much. With our very last breath, we made massive efforts to stabilize the country, but it was no use, there's no coming back now.;;;;;;;;;;;;;x
+EVTOPTA8172;It's over.;;;;;;;;;;;;;x
 EVTNAME8172;Lunch time!;;;;;;;;;;;;;x
 EVTDESC8172;\n\n\n\nNothing better than some nice warm food aftera country breaking revolution!;;;;;;;;;;;;;x
 EVTOPTA8172;Feijoada!;;;;;;;;;;;;;x
