--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -882,6 +882,14 @@ EVTNAME8016;Republican Revolution?;;;;;;;;;;;;;
 EVTDESC8016;The end of slavery had resulted in an explicit shift of support to republicanism by rich and powerful coffee farmers who held great political, economic and social power in the country. To avert a republican backlash, the government adopted a series of credit and military policies and reforms to appease the land owners. The measures made by the government alarmed the civilian republicans and the Positivists in the military corps. They saw that it would undercut support for their own aims, and were emboldened to further action. For them, it had become a case of ‘now or never’. Although there was no desire in Brazil among the majority of the population to change the form of government, the civilian republicans began pressuring the Positivist officers to overthrow the monarchy. The Positivists launched a coup d’état and tried to institute a republic on November 15, 1889. During the whole ordeal Pedro II showed no emotion, as if unconcerned about the outcome. He only commented:;;;;;;;;;;;;;x
 EVTOPTA8016;If this is how it is, I will retire. I worked too much and I’m tired. Now I’ll rest.;;;;;;;;;;;;;x
 EVTOPTB8016;Crush the rebellion!;;;;;;;;;;;;;x
+EVTNAME8017;  ;;;;;;;;;;;;;
+EVTDESC8017;  ;;;;;;;;;;;;;
+EVTOPTA8017;  ;;;;;;;;;;;;;
+EVTNAME8018;The Imperial Family;;;;;;;;;;;;;
+EVTDESC8018;After the recent revolution, we were pondering what to do with the royal family. While they ultimately forced out for a reason, the regime ended in a somewhat peaceful way, and the common folk is mostly unaware of what's going, but the royal family is somewhat well liked, and once the word spread around they may be able to instigate the people to be against the new regime. \n\nWe could straight up exile them, but we could also let them be.;;;;;;;;;;;;;
+EVTOPTA8018;Exile them!;;;;;;;;;;;;;
+EVTOPTB8018;Let them stay, but strip them away of their political rights.;;;;;;;;;;;;;
+EVTOPTC8018;Let them stay, they are harmless.;;;;;;;;;;;;;
 EVTNAME8100;Farrapos pushed back!;;;;;;;;;;;;;x
 EVTDESC8100;Our army managed to push back the farraupilha army and secure our land back! Another triumph standing as a testament to the unyielding commitment and sacrifice of our soldiers.;;;;;;;;;;;;;x
 EVTOPTA8100;This land is rightfully ours!;;;;;;;;;;;;;x
