Eusebio de Queiroz Law added

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1006,6 +1006,13 @@ EVTNAME8301;The Slavery Question;;;;;;;;;;;;;x
 EVTDESC8301;Slavery have been an contenduous topic for a good while. The country is heavily dependent on slave work and the aristocracy may not like the idea of losing it's free labor. We need to examine the current status of the country before proceeding with abolition.;;;;;;;;;;;;;x
 EVTOPTA8301;We are not yet ready.;;;;;;;;;;;;;x
 EVTOPTB8301;The time to abolish slavery is now!;;;;;;;;;;;;;x
+EVTDESC8305;The British Parliament has signed the Aberdeen Act into law, giving them authority to seize and search Brazilian vessels for any slave traders, enforcing an end to the illegal slave trade.;;;;;;;;;;;;;x
+EVTNAME8305;The Aberdeen Act;;;;;;;;;;;;;x
+EVTOPTA8305;This cannot come to war with the British. Let it be.;;;;;;;;;;;;;x
+EVTOPTB8305;The British will not rule over us!;;;;;;;;;;;;;x
+EVTDESC8306;The Brazilians have denied the Aberdeen Act, and are strictly refusing British ships access to their waters.;;;;;;;;;;;;;x
+EVTNAME8306;$FROMCOUNTRY$ Refuses!;;;;;;;;;;;;;x
+EVTOPTA8306;Damn them!;;;;;;;;;;;;;x
 EVTNAME8400;Il Guarany;;;;;;;;;;;;;x
 EVTDESC8400;O Guarani, composed by Antônio Carlos Gomes and based on the book of same name, just debuted in Milan, and to much appraise of the international community. \n\n It's arguable Antônio Carlos is the first new world composer to be truly accepted in Europe, a true gem of our country showing how the new world is indeed the future!.;;;;;;;;;;;;;x
 EVTOPTA8400;A real gem indeed, bringing our culture and heritage in the world's spot light!;;;;;;;;;;;;;x
