--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -11,6 +11,7 @@ override_tool_tip;Activate:§G National Campaign.§! \n\n§RWARNING:§! National Cam
 claim_tooltip;Get a §YClaim§! on: \n    Misiones \n    Easterm Misiones\n    Corrientes\n    Entre Rios\n    Palma Suela§b;;;;;;;;;;;;x
 acquire_all_claims;Acquire all claimed land;;;;;;;;;;;;x
 break_line_tool_tip;§!\n\n;;;;;;;;;;;;x
+ban_slave_trade;§GBans§! Slave Trade.§b;;;;;;;;;;;;x
 brz_politics_improve;This will §Gimprove§! the Political Landscape for Abolition.§b;;;;;;;;;;;;x
 brz_politics_worsen;This will §Rworsen§! the Political Landscape for Abolition.§b;;;;;;;;;;;;x
 brz_economics_improve;This will §Gimprove§! the Economical Landscape for Abolition.§b;;;;;;;;;;;;x
