--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3551,3 +3551,5 @@ claim_grao_para_title;Integrate Grão Para;;;;;;;;;;;;;x
 claim_grao_para_desc;The old province of Grão Para is a fellow former brazilian state and share lots of cultural traits with us, it's only natural for us to expand our influence east.;;;;;;;;;;;;;;x
 unify_the_south_title;Unify the Southern States;;;;;;;;;;;;;;x
 unify_the_south_desc;With our current position of power, and the entire region under our control, we can unite our region under our banner and common cultural roots, becoming the true home of the brazilian gaucho!;;;;;;;;;;;;;;x
+eusebio_de_queiroz_title;Eusébio de Queiroz Law;;;;;;;;;;;;;;x
+eusebio_de_queiroz_desc;Given the current situation, it would be resonable to ban the atlantic slave trade, this would be one of many steps towards an mindful abolition. This would restrict the slave flow into our country and hopefully start preparing farmers to eventually change their work force.;;;;;;;;;;;;;;x 
