--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3552,4 +3552,6 @@ claim_grao_para_desc;The old province of Grão Para is a fellow former brazilian 
 unify_the_south_title;Unify the Southern States;;;;;;;;;;;;;;x
 unify_the_south_desc;With our current position of power, and the entire region under our control, we can unite our region under our banner and common cultural roots, becoming the true home of the brazilian gaucho!;;;;;;;;;;;;;;x
 eusebio_de_queiroz_title;Eusébio de Queiroz Law;;;;;;;;;;;;;;x
-eusebio_de_queiroz_desc;Given the current situation, it would be resonable to ban the atlantic slave trade, this would be one of many steps towards an mindful abolition. This would restrict the slave flow into our country and hopefully start preparing farmers to eventually change their work force.;;;;;;;;;;;;;;x 
+eusebio_de_queiroz_desc;Given the current situation, it's resonable to ban the atlantic slave trade, this will be one of many steps towards an mindful abolition. This will restrict the slave flow into our country and hopefully start preparing farmers to eventually change their work force.;;;;;;;;;;;;;;x
+ventre_livre_title;Ventre Livre Law;;;;;;;;;;;;;;x
+ventre_livre_desc;Freeing brazilian born slaves is the next natural step towards abolition. Assuming we properly restrict the entry of new slaves from Africa, this will effectively put a time limit for slavery in our country.;;;;;;;;;;;;;;x
