Lei dos sexagenarios/registro added

--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3555,3 +3555,5 @@ eusebio_de_queiroz_title;Eusébio de Queiroz Law;;;;;;;;;;;;;;x
 eusebio_de_queiroz_desc;Given the current situation, it's resonable to ban the atlantic slave trade, this will be one of many steps towards an mindful abolition. This will restrict the slave flow into our country and hopefully start preparing farmers to eventually change their work force.;;;;;;;;;;;;;;x
 ventre_livre_title;Ventre Livre Law;;;;;;;;;;;;;;x
 ventre_livre_desc;Freeing brazilian born slaves is the next natural step towards abolition. Assuming we properly restrict the entry of new slaves from Africa, this will effectively put a time limit for slavery in our country.;;;;;;;;;;;;;;x
+sexagenarios_title;Sexagenarios Law;;;;;;;;;;;;;;x
+sexagenarios_desc;Even with the slave born children being freed the pace of freedom is still too slow, we need to start giving incentives to farmers to free their slaves: A compensantion system where slave owners will get a indemnity for freeing their slaves, and younger is the slave being freed, the bigger is it's owner indemnity, up to 59 years old, and older slaves than that will be automatically freed.;;;;;;;;;;;;;;x
