Added pre ab events

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1013,6 +1013,10 @@ EVTOPTB8305;The British will not rule over us!;;;;;;;;;;;;;x
 EVTDESC8306;The Brazilians have denied the Aberdeen Act, and are strictly refusing British ships access to their waters.;;;;;;;;;;;;;x
 EVTNAME8306;$FROMCOUNTRY$ Refuses!;;;;;;;;;;;;;x
 EVTOPTA8306;Damn them!;;;;;;;;;;;;;x
+EVTDESC8362;Though the Atlantic slave trade has been dismantled by the British, many traders in Brazil have found ways to smuggle slaves into our country. Here in $PROVINCENAME$, new slaves have been sold into plantations; they may improve our economy, but the British may eventually catch on if we don't put an end to this.;;;;;;;;;;;;x
+EVTNAME8362;Slaves Imported;;;;;;;;;;;;;x
+EVTOPTA8362;This is illegal!;;;;;;;;;;;;;x
+EVTOPTB8362;Okay, just this once...;;;;;;;;;;;;;x
 EVTNAME8400;Il Guarany;;;;;;;;;;;;;x
 EVTDESC8400;O Guarani, composed by Antônio Carlos Gomes and based on the book of same name, just debuted in Milan, and to much appraise of the international community. \n\n It's arguable Antônio Carlos is the first new world composer to be truly accepted in Europe, a true gem of our country showing how the new world is indeed the future!.;;;;;;;;;;;;;x
 EVTOPTA8400;A real gem indeed, bringing our culture and heritage in the world's spot light!;;;;;;;;;;;;;x
