--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1179,6 +1179,8 @@ slavery_propaganda;Slavery Propaganda;;;;;;;;;;;;;x
 slavery_propaganda_desc;To improve our grip on slavery, we must spread word amongst the people that slavery is good, and will lead to a better nation. So long as there is $COUNTRY_ADJ$ doubt about slavery, this propaganda must go on.;;;;;;;;;;;;;x
 slavery_timer;Slavery timer;;;;;;;;;;;;;x
 slavery_timer_desc;This is a timer for slavery.;;;;;;;;;;;;;x
+slavery_action_cooldown;Slavery Action Cooldown;;;;;;;;;;;;;x
+slavery_action_cooldown_desc;We have recently taken vast measures regarding slavery, doing another big move now would be extremely detrimental.;;;;;;;;;;;;;x
 slightly_damaged_city;Slightly Damaged City;;;;;;;;;;;;;x
 slightly_damaged_city_desc;A terrible disaster affected this city! Thankfully our government enacted some measures to help the population.;;;;;;;;;;;;;x
 slow_down_progress;Reform Restrictions;;;;;;;;;;;;;x
