--- a/TGC/localisation/00_map-regions.csv
+++ b/TGC/localisation/00_map-regions.csv
@@ -731,6 +731,7 @@ GER_2539;Northern Solomon Islands;;;;;;;;;;;;;x
 TON_2540;Tonga Islands;;;;;;;;;;;;;x
 USA_2543;Navigator Islands;;;;;;;;;;;;;x
 BRZ_2549;Acre;;;;;;;;;;;;;x
+BRZ_2449;Espírito Santo;;;;;;;;;;;;;x
 ENG_2552;Southern Polynesia;;;;;;;;;;;;;x
 USA_2556;North Carolina;;;;;;;;;;;;;x
 HES_2560;Hessen-Wiesbaden;;;;;;;;;;;;;x
