More stuff for minas

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -994,6 +994,10 @@ EVTOPTG8172;Moqueca de Peixe!;;;;;;;;;;;;;x
 EVTOPTH8172;Galinhada!;;;;;;;;;;;;;x
 EVTOPTI8172;Pato no Tucupi!;;;;;;;;;;;;;x
 EVTOPTX8172;Something else...;;;;;;;;;;;;;x
+EVTNAME8180;$FROM$ offers to buy Espírito Santo;;;;;;;;;;;;;x
+EVTDESC8180;Our land locked neighbour $FROM$ is offering to buy the state of Espirito Santo, while the state is nothing to scoff about when talking about resources, the extra money could really come in handy given we are a new country and seriously needing funding.;;;;;;;;;;;;;x 
+EVTOPTA8180;So be it! Sell it!;;;;;;;;;;;;;x
+EVTOPTB8180;The land is ours!;;;;;;;;;;;;;x
 EVTNAME8205;The Revival of the Brasilic Confederation;;;;;;;;;;;;;x
 EVTDESC8205;In a surprising turn of events, Brazil has begun financing the revival of the Brasilic Confederation, an Angolan movement with the intention of gaining independence and potentially aligning with the Brazilian Empire. Some view it as a bold and ambitious step, while others are concerned about the potential diplomatic tensions it may create with Portugal, but this obviously put our colonial interests at risk.;;;;;;;;;;;;;x 
 EVTOPTA8205;Traitors!;;;;;;;;;;;;;x
