--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3553,6 +3553,8 @@ unify_the_south_title;Unify the Southern States;;;;;;;;;;;;;;x
 unify_the_south_desc;With our current position of power, and the entire region under our control, we can unite our region under our banner and common cultural roots, becoming the true home of the brazilian gaucho!;;;;;;;;;;;;;;x
 mar_das_gerais_title;Mar das Gerais;;;;;;;;;;;;;;x
 mar_das_gerais_desc;After the split, our country have been left without sea access. That's obviously a major problem for our economy. Even if our fellow former brazilian states are friendly, relaying on another country's ports is a major handicap to our industry.\n\nIt's only natural for us to seek sea access, and the first place to look are the lands of Espirito Santo, which we should, at first, try to buy out.;;;;;;;;;;;;;;x
+mar_das_gerais2_title;Finalize Espirito Santo buy;;;;;;;;;;;;;;x
+mar_das_gerais2_desc;We can now formalize the Espirito Santo buy, this will surely improve our economic outlook.;;;;;;;;;;;;;;x
 eusebio_de_queiroz_title;Eusébio de Queiroz Law;;;;;;;;;;;;;;x
 eusebio_de_queiroz_desc;Given the current situation, it's resonable to ban the atlantic slave trade, this will be one of many steps towards an mindful abolition. This will restrict the slave flow into our country and hopefully start preparing farmers to eventually change their work force.;;;;;;;;;;;;;;x
 ventre_livre_title;Ventre Livre Law;;;;;;;;;;;;;;x
