--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1580,4 +1580,8 @@ farrapos_compromise_fair_desc;As part of the Poncho Verde Peace Treaty, we agree
 praieiros;Praieiros;;;;;;;;;;;;;x
 balaios;Balaios;;;;;;;;;;;;;x
 partido_brasileiro;Brasilian Party;;;;;;;;;;;;;x
-partido_brasileiro;The Brasilian Party is instigating separatism!;;;;;;;;;;;;;x
+partido_brasileiro_desc;The Brasilian Party is instigating separatism!;;;;;;;;;;;;;x
+espirito_santo_deal;Espírito Santo deal;;;;;;;;;;;;;x
+espirito_santo_deal_desc;The deal to buy Espírito Santo is open! Hurry up and buy it!;;;;;;;;;;;;;x
+reorganizing_labor;Reorganizing Labor;;;;;;;;;;;;;x
+reorganizing_labor_desc;After slavery was abolished, the local slave dependent economy was deeply affected and is still recovering.;;;;;;;;;;;;;x
