Slavey Debuff proper implemenation

--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -10,9 +10,10 @@ election_tool_tip_muted;Election Events will be §Gmuted§!, but their results wil
 override_tool_tip;Activate:§G National Campaign.§! \n\n§RWARNING:§! National Campaigns will take a significant amount of money daily! Be careful otherwise you WILL bankrupt!§b;;;;;;;;;;;;x
 claim_tooltip;Get a §YClaim§! on: \n    Misiones \n    Easterm Misiones\n    Corrientes\n    Entre Rios\n    Palma Suela§b;;;;;;;;;;;;x
 acquire_all_claims;Acquire all claimed land;;;;;;;;;;;;x
-break_line_tool_tip;§!\n\n;;;;;;;;;;;;x
+break_line_tool_tip;§!\n;;;;;;;;;;;;x
 ban_slave_trade;§GBans§! Slave Trade.§b;;;;;;;;;;;;x
 brz_politics_improve;This will §Gimprove§! the Political Landscape for Abolition.§b;;;;;;;;;;;;x
 brz_politics_worsen;This will §Rworsen§! the Political Landscape for Abolition.§b;;;;;;;;;;;;x
 brz_economics_improve;This will §Gimprove§! the Economical Landscape for Abolition.§b;;;;;;;;;;;;x
 brz_economics_worsen;This will §Rworsen§! the Economical Landscape for Abolition.§b;;;;;;;;;;;;x
+slavery_end_economic_tooltip;Provinces will be hit with an RGO debuff, from -10% to -25%, based on their slave population.§b;;;;;;;;;;;;x
