--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1585,3 +1585,5 @@ espirito_santo_deal;Espírito Santo deal;;;;;;;;;;;;;x
 espirito_santo_deal_desc;The deal to buy Espírito Santo is open! Hurry up and buy it!;;;;;;;;;;;;;x
 reorganizing_labor;Reorganizing Labor;;;;;;;;;;;;;x
 reorganizing_labor_desc;After slavery was abolished, the local slave dependent economy was deeply affected and is still recovering.;;;;;;;;;;;;;x
+lei_do_registro;Register Law;;;;;;;;;;;;;x
+lei_do_registro_desc;Slaves are being registered and freed, but we are repaying the former owners from our pocket.;;;;;;;;;;;;;x
