--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1583,7 +1583,13 @@ partido_brasileiro;Brasilian Party;;;;;;;;;;;;;x
 partido_brasileiro_desc;The Brasilian Party is instigating separatism!;;;;;;;;;;;;;x
 espirito_santo_deal;Espírito Santo deal;;;;;;;;;;;;;x
 espirito_santo_deal_desc;The deal to buy Espírito Santo is open! Hurry up and buy it!;;;;;;;;;;;;;x
-reorganizing_labor;Reorganizing Labor;;;;;;;;;;;;;x
-reorganizing_labor_desc;After slavery was abolished, the local slave dependent economy was deeply affected and is still recovering.;;;;;;;;;;;;;x
+reorganizing_labor_harsh;Reorganizing Labor;;;;;;;;;;;;;x
+reorganizing_labor_harsh_desc;After slavery was abolished, the local slave dependent economy was deeply affected and is still recovering.;;;;;;;;;;;;;x
+reorganizing_labor_mild;Reorganizing Labor;;;;;;;;;;;;;x
+reorganizing_labor_mild_desc;After slavery was abolished, the local slave dependent economy was deeply affected and is still recovering.;;;;;;;;;;;;;x
+reorganizing_labor_light;Reorganizing Labor;;;;;;;;;;;;;x
+reorganizing_labor_light_desc;After slavery was abolished, the local slave dependent economy was deeply affected and is still recovering.;;;;;;;;;;;;;x
+reorganizing_labor_minimal;Reorganizing Labor;;;;;;;;;;;;;x
+reorganizing_labor_minimal_desc;After slavery was abolished, the local slave dependent economy was deeply affected and is still recovering.;;;;;;;;;;;;;x
 lei_do_registro;Register Law;;;;;;;;;;;;;x
 lei_do_registro_desc;Slaves are being registered and freed, but we are repaying the former owners from our pocket.;;;;;;;;;;;;;x
