Lots of balance changes

--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -1797,6 +1797,7 @@ PLC_democracy;Poland-Lithuania;;;;;;;;;;;;;x
 PLC_fascist_dictatorship;Polish-Lithuanian Republic;;;;;;;;;;;;;x
 PLC_presidential_dictatorship;Polish-Lithuanian Republic;;;;;;;;;;;;;x
 PLC_proletarian_dictatorship;Polish-Lithuanian Republic;;;;;;;;;;;;;x
+PNB_democracy2;Praieiros;;;;;;;;;;;;;x
 PML_colonial_company;Westpreußen;;;;;;;;;;;;;x
 PML_dominion;Westpreußen;;;;;;;;;;;;;x
 PNJ_absolute_monarchy;Sikh Empire;;;;;;;;;;;;;x
@@ -1857,8 +1858,10 @@ RGR_fascist_dictatorship;Rio Bravo;;;;;;;;;;;;;x
 RGR_federal_democracy;Republic of the Rio Grande;;;;;;;;;;;;;x
 RGS_fascist_dictatorship;Pampas;;;;;;;;;;;;;x
 RJL_democracy;Juliana Republic;;;;;;;;;;;;;x
-GPR_democracy;Cabanos;;;;;;;;;;;;;x
+GPR_democracy2;Cabanos;;;;;;;;;;;;;x
+GPR_democracy;Amazonas;;;;;;;;;;;;;x
 GPR_monarchy;Kingdom of Amazonas;;;;;;;;;;;;;x
+GPR_monarchy2;Grão Para;;;;;;;;;;;;;x
 RJL_monarchy;Juliana Kingdom;;;;;;;;;;;;;x
 RIO_democracy2;Guanabara Republic;;;;;;;;;;;;;x
 RHO_absolute_monarchy;Southern Rhodesia;Rhodésie du sud;Südrhodesien;;;;;;;;;;;x
