--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -976,24 +976,26 @@ EVTOPTA8167;This is truly a terrible blow to the nation as a whole.;;;;;;;;;;;;;
 EVTNAME8170;The end of Brazil.;;;;;;;;;;;;;x
 EVTDESC8170;The country is in shambles.\n\nRevolt after revolt, bad decision after bad decision, the brasilian state got weaker and weaker, the people are restless and distrustful of the government.\n\nThe dreams of a brasilian great power are slowly fading away, maybe it was never meant to be, maybe we should follow the steps of our colonial cousins in the rest of south america and leave behind the idea of a united brasilian state.;;;;;;;;;;;;;x
 EVTOPTA8170;We are brasilians, we will stay as brasilians!;;;;;;;;;;;;;x
+EVTOPTB8170;Organized the government around our main cores, we can still salvage the country!;;;;;;;;;;;;;x
+EVTOPTC8170;So be it! Brazil is no more.;;;;;;;;;;;;;x
 EVTNAME8171;The end of Brazil.;;;;;;;;;;;;;x
 EVTDESC8171;The dream of a united brasilian state is no more. The government failed to secure the country's goals, safe keep it's borders and, the most important, maintain the national identity together.\n\nThe dream of a great power brasilian state is now gone, it's over.;;;;;;;;;;;;;x
 EVTOPTA8171;Maybe we will arise again one day...;;;;;;;;;;;;;x
 EVTNAME8172;The end of Brazil.;;;;;;;;;;;;;x
 EVTDESC8172;There's no escape now. \n\n We tried our best to salvage the country, but it was just too much. With our very last breath, we made massive efforts to stabilize the country, but it was no use, there's no coming back now.;;;;;;;;;;;;;x
 EVTOPTA8172;It's over.;;;;;;;;;;;;;x
-EVTNAME8172;Lunch time!;;;;;;;;;;;;;x
-EVTDESC8172;\n\n\n\nNothing better than some nice warm food aftera country breaking revolution!;;;;;;;;;;;;;x
-EVTOPTA8172;Feijoada!;;;;;;;;;;;;;x
-EVTOPTB8172;Virado á Paulista!;;;;;;;;;;;;;x
-EVTOPTC8172;Pão de queijo!;;;;;;;;;;;;;x
-EVTOPTD8172;Churrasco!;;;;;;;;;;;;;x
-EVTOPTE8172;Acarajé!;;;;;;;;;;;;;x
-EVTOPTF8172;Buchada!;;;;;;;;;;;;;x
-EVTOPTG8172;Moqueca de Peixe!;;;;;;;;;;;;;x
-EVTOPTH8172;Galinhada!;;;;;;;;;;;;;x
-EVTOPTI8172;Pato no Tucupi!;;;;;;;;;;;;;x
-EVTOPTX8172;Something else...;;;;;;;;;;;;;x
+EVTNAME8173;Lunch time!;;;;;;;;;;;;;x
+EVTDESC8173;\n\n\n\nNothing better than some nice warm food aftera country breaking revolution!;;;;;;;;;;;;;x
+EVTOPTA8173;Feijoada!;;;;;;;;;;;;;x
+EVTOPTB8173;Virado á Paulista!;;;;;;;;;;;;;x
+EVTOPTC8173;Pão de queijo!;;;;;;;;;;;;;x
+EVTOPTD8173;Churrasco!;;;;;;;;;;;;;x
+EVTOPTE8173;Acarajé!;;;;;;;;;;;;;x
+EVTOPTF8173;Buchada!;;;;;;;;;;;;;x
+EVTOPTG8173;Moqueca de Peixe!;;;;;;;;;;;;;x
+EVTOPTH8173;Galinhada!;;;;;;;;;;;;;x
+EVTOPTI8173;Pato no Tucupi!;;;;;;;;;;;;;x
+EVTOPTX8173;Something else...;;;;;;;;;;;;;x
 EVTNAME8180;$FROMCOUNTRY$ offers to buy Espírito Santo;;;;;;;;;;;;;x
 EVTDESC8180;Our land locked neighbour $FROMCOUNTRY$ is offering to buy the state of Espirito Santo, while the state is nothing to scoff about when talking about resources, the extra money could really come in handy given we are a new country and seriously needing funding.;;;;;;;;;;;;;x 
 EVTOPTA8180;So be it! Sell it!;;;;;;;;;;;;;x
