--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -585,7 +585,7 @@ CFB;Brasilic Confederation;;;;;;;;;;;;;x
 RIO;Rio de Janeiro;;;;;;;;;;;;;x
 RJL;Juliana;;;;;;;;;;;;;x
 MGS;Minas Gerais;;;;;;;;;;;;;x
-GPR;Cabano Republic;;;;;;;;;;;;;x
+GPR;Cabanos;;;;;;;;;;;;;x
 MAR;Maranhão;;;;;;;;;;;;;x
 SPL;São Paulo;;;;;;;;;;;;;x
 MTG;Transatlantic Republic of Mato Grosso;;;;;;;;;;;;;x
