No More "Buyaha"

--- a/TGC/localisation/00_countries-demonyms.csv
+++ b/TGC/localisation/00_countries-demonyms.csv
@@ -219,7 +219,7 @@ BUK_proletarian_dictatorship_ADJ;Uzbek;;;;;;;;;;;;;x
 BUL_ADJ;Bulgarian;Bulgare;Bulgarisch;;;;;;;;;;;x
 BUN_ADJ;Bundeli;Bundeli;Bundeli;;;;;;;;;;;x
 BUR_ADJ;Burmese;Birman;Burmesisch;;;;;;;;;;;x
-BUY_ADJ;Buhayan;;;;;;;;;;;;;x
+BHY_ADJ;Buhayan;;;;;;;;;;;;;x
 BYE_ADJ;Belarusian;;;;;;;;;;;;;x
 BYZ_ADJ;Greek;;;;;;;;;;;;;x
 BZD_ADJ;Bayazidi;;;;;;;;;;;;;x
