--- a/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
+++ b/TGC Niche Submods/TGCCountriesEndonymicLocalization/localisation/000000_A_TGC Endonymic Names.csv
@@ -1184,18 +1184,18 @@ BUR_fascist_dictatorship;Pyidaunzu Myama Nainngandaw;x;
 BUR_colonial_company;Myanmarpyi Naalmyay;x;
 BUR_dominion;Myanmarpyi Naalmyay;x;
 BUR_ADJ;Bamar;x;
-#### BUY ####;
-BUY_absolute_monarchy;Buhaya Kingdom;x;
-BUY_prussian_constitutionalism;Buhaya Kingdom;x;
-BUY_hms_government;Buhaya Kingdom;x;
-BUY_democracy;Free Republic of Buhaya;x;
-BUY_proletarian_dictatorship;People's State of Buhaya;x;
-BUY_presidential_dictatorship;State of Buhaya;x;
-BUY_bourgeois_dictatorship;State of Buhaya;x;
-BUY_fascist_dictatorship;Free Haya State;x;
-BUY_colonial_company;Buhaya Kingdom;x;
-BUY_dominion;Buhaya Kingdom;x;
-BUY_ADJ;Haya;x;
+#### BHY ####;
+BHY_absolute_monarchy;Buhaya Kingdom;x;
+BHY_prussian_constitutionalism;Buhaya Kingdom;x;
+BHY_hms_government;Buhaya Kingdom;x;
+BHY_democracy;Free Republic of Buhaya;x;
+BHY_proletarian_dictatorship;People's State of Buhaya;x;
+BHY_presidential_dictatorship;State of Buhaya;x;
+BHY_bourgeois_dictatorship;State of Buhaya;x;
+BHY_fascist_dictatorship;Free Haya State;x;
+BHY_colonial_company;Buhaya Kingdom;x;
+BHY_dominion;Buhaya Kingdom;x;
+BHY_ADJ;Haya;x;
 ##### BYE #####;
 BYE_absolute_monarchy;Karalieustva Bielarus;x;
 BYE_prussian_constitutionalism;Karalieustva Bielarus;x;
