--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -127,7 +127,7 @@ BUK;Bukkhara;Boukhara;Buchara;;;;;;;;;;;x
 BUL;Bulgaria;Bulgarie;Bulgarien;;;;;;;;;;;x
 BUN;Bundelkhand;Bundelkhand;Bundelkhand;;;;;;;;;;;x
 BUR;Burma;Birmanie;Burma;;;;;;;;;;;x
-BUY;Buyaha;;;;;;;;;;;;;x
+BHY;Buhaya;;;;;;;;;;;;;x
 BYE;Belarus;;;;;;;;;;;;;x
 BYZ;Greek Empire;Empire byzantin;Byzantinisches Reich;;;;;;;;;;;x
 BZD;Bayazid;;;;;;;;;;;;;x
