bunch of RGS bugs fixed

--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -17,3 +17,4 @@ brz_politics_worsen;§!This will §Rworsen§! the Political Landscape for Abolition
 brz_economics_improve;§!This will §Gimprove§! the Economical Landscape for Abolition.§b;;;;;;;;;;;;x
 brz_economics_worsen;§!This will §Rworsen§! the Economical Landscape for Abolition.§b;;;;;;;;;;;;x
 slavery_end_economic_tooltip;Provinces will be hit with an RGO debuff, from -10% to -25%, based on their slave population.§b;;;;;;;;;;;;x
+become_sul;Become §BSul§b;;;;;;;;;;;;x
