--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -1857,7 +1857,7 @@ RGR_democracy;Republic of the Rio Grande;;;;;;;;;;;;;x
 RGR_fascist_dictatorship;Rio Bravo;;;;;;;;;;;;;x
 RGR_federal_democracy;Republic of the Rio Grande;;;;;;;;;;;;;x
 RGS_fascist_dictatorship;Pampas;;;;;;;;;;;;;x
-RGS_democracy2;Sul;x;
+RGS_democracy2;Rio-Grandense Republic;x;
 RJL_democracy;Juliana Republic;;;;;;;;;;;;;x
 GPR_democracy2;Cabanos;;;;;;;;;;;;;x
 GPR_democracy;Amazonas;;;;;;;;;;;;;x
