Eastern Missiones Dispute

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1015,6 +1015,44 @@ EVTDESC8206;\nIn a remarkable and historic development, the Brasilian Party's ti
 EVTOPTA8206;So be it! The Brasilic Confederation will do for a nice satellite in Africa!;;;;;;;;;;;;;x
 EVTOPTB8206;Integrate the territory into brazilian command!;;;;;;;;;;;;;x
 EVTOPTC8206;This is was a bad idea from the very start, we can't risk the diplomatic risk.;;;;;;;;;;;;;x
+EVTDESC8210;Brazillian settlers have started to settle the disputed region of Eastern Misiones, and Brazil seeks to establish a presence in the region. The territory has been in active dispute since at least 1750, with no definitive demarcation successful by either side. Now, the $FROMCOUNTRY_ADJ$ government has authorized the establishment of two military colonies near the Chapecó and Chopim rivers. If we claim that these are the Pepiry Guazú and San Antonio rivers that outlined the border between the Spanish and Portuguese domains, we would have a basis to dispute their settlement and maybe even gain international attention in our favor.;;;;;;;;;;;;;x
+EVTNAME8210;The Eastern Misiones Dispute;;;;;;;;;;;;;x
+EVTOPTA8210;We must accept the situation.;;;;;;;;;;;;;x
+EVTOPTB8210;Issue a diplomatic protest;;;;;;;;;;;;;x
+EVTOPTC8210;We will defend our claims with gunpowder and steel!;;;;;;;;;;;;;x
+EVTOPTD8210;We should defer this dispute to the great powers.;;;;;;;;;;;;;x
+EVTDESC8211;We have received word from $FROMCOUNTRY$ that they relinquish their claims in Eastern Misiones.;;;;;;;;;;;;;x
+EVTNAME8211;$FROMCOUNTRY$ concedes!;;;;;;;;;;;;;x
+EVTOPTA8211;Splendid!;;;;;;;;;;;;;x
+EVTDESC8212;$FROMCOUNTRY$ has issued a protest regarding our occupation of Eastern Misiones. We can expect them to continue to claim the region for the time being, but as things stand, we are unopposed.;;;;;;;;;;;;;x
+EVTNAME8212;$FROMCOUNTRY$ protests!;;;;;;;;;;;;;x
+EVTOPTA8212;They can complain all they like;;;;;;;;;;;;;x
+EVTDESC8213;The emmissary from $FROMCOUNTRY_ADJ$ has informed us that their government is prepared to contest our claims in Eastern Misiones, even if that means war. While our military commanders are condfident that they can provide us with a victory in the field, we must also consider how this will reflect on us on the international stage.;;;;;;;;;;;;;x
+EVTNAME8213;$FROMCOUNTRY$ threatens war!;;;;;;;;;;;;;x
+EVTOPTA8213;We cannot risk escalating this any further.;;;;;;;;;;;;;x
+EVTOPTB8213;The final argument of kings has not yet failed us;;;;;;;;;;;;;x
+EVTDESC8214;The war is going well, and our troops have already occupied most of the Misiones plateau. These lands lie just across the Uruguay river from our holdings in Rio Grande do Sul. These lands are fertile and bountiful, and there isn't really anyone who could stop us from annexing them at this point, and yet, some in our government are concerned that this would make us the aggressors in this war, and could draw sympathies for the enemy cause.;;;;;;;;;;;;;x
+EVTNAME8214;Claim all of Misiones?;;;;;;;;;;;;;x
+EVTOPTA8214;Do it! Our prosperity demands land!;;;;;;;;;;;;;x
+EVTOPTB8214;Let's not be too greedy;;;;;;;;;;;;;x
+EVTDESC8215;We have been approached to settle a territorial dispute in the Eastern Misiones region. The area has, until recently, been unsettled by Europeans, but a dispute has arisen when Brazillian settlers started settling the region. Both sides call back to the 1750 treaty between the Spanish and Portuguese crowns, marking the barrier at the Chapecó and Chopim rivers - the issue is that these rivers were never properly surveyed in the years following the treaty, and now which rivers these are is open to interpretation.;;;;;;;;;;;;;x
+EVTNAME8215;A territorial dispute in Eastern Misiones;;;;;;;;;;;;;x
+EVTOPTA8215;Favor the Portuguese claim;;;;;;;;;;;;;x
+EVTOPTB8215;Favor the Spanish claim;;;;;;;;;;;;;x
+EVTOPTC8215;We don't have time for their petty squabbles;;;;;;;;;;;;;x
+EVTDESC8216;The $FROMCOUNTRY_ADJ$ government has decided against us. This is a great humiliation and disappointment.;;;;;;;;;;;;;x
+EVTNAME8216;The $FROMCOUNTRY_ADJ$ ruling;;;;;;;;;;;;;x
+EVTOPTA8216;Damnation;;;;;;;;;;;;;x
+EVTDESC8217;The $FROMCOUNTRY_ADJ$ government has decided in our favor. This is a great victory for our nation!;;;;;;;;;;;;;x
+EVTNAME8217;The $FROMCOUNTRY_ADJ$ ruling;;;;;;;;;;;;;x
+EVTOPTA8217;Splendid;;;;;;;;;;;;;x
+EVTDESC8218;With the rising tensions about the ownership over the territory of Eastern Misiones, $FROMCOUNTRY$ has come out on top and has established a military presence in the region. While we don't have a presence in the area, we do still have some de jure claims. Perhaps, as a show of goodwill, towards $FROMCOUNTRY$, we might consider renouncing them?;;;;;;;;;;;;;x
+EVTNAME8218;The Eastern Misiones Crisis;;;;;;;;;;;;;x
+EVTOPTA8218;Do it - we should focus on the situation at hand;;;;;;;;;;;;;x
+EVTDESC8219;The territory of Eastern Misiones has been in active dispute between Argentine and Brazillian authorities since at least 1750, with no definitive demarcation successful by either side, leading to a gentleman's agreement that neither side will settle the area or host troops there. However, we own both sides of the disputed area now, so the issue is rendered moot - it is ours!;;;;;;;;;;;;;x
+EVTNAME8219;The Eastern Misiones dispute rendered moot;;;;;;;;;;;;;x
+EVTOPTA8219;What a silly little dispute;;;;;;;;;;;;;x
+EVTOPTB8218;We will not renounce anything - our time will come;;;;;;;;;;;;;x
 EVTNAME8301;The Slavery Question;;;;;;;;;;;;;x
 EVTDESC8301;Slavery have been an contenduous topic for a good while. The country is heavily dependent on slave work and the aristocracy may not like the idea of losing it's free labor. We need to examine the current status of the country before proceeding with abolition.;;;;;;;;;;;;;x
 EVTOPTA8301;We are not yet ready.;;;;;;;;;;;;;x
