Treaty of Bogotá

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1053,6 +1053,10 @@ EVTDESC8219;The territory of Eastern Misiones has been in active dispute between
 EVTNAME8219;The Eastern Misiones dispute rendered moot;;;;;;;;;;;;;x
 EVTOPTA8219;What a silly little dispute;;;;;;;;;;;;;x
 EVTOPTB8218;We will not renounce anything - our time will come;;;;;;;;;;;;;x
+EVTDESC8220;Ever since our declaration of independence, our borders with the neighbouring Brazilians have not been delineated through any treaty. The resident minister of $FROMCOUNTRY$ in $COUNTRY$, Enéas Martins, is on a special mission in $CAPITAL$, to meet with the Minister of Foreign Affairs, Alfredo Vásquez Cobo, to delineate a treaty to settle the border issue. The treaty would establish the border from the Rio Negro north-westward along the Amazon River-Orinoco watershed divide, then generally southward along various river courses and straight-line segments to the mouth of the Apaporis River. This would effectively mean the Marabitanas province will end up part of Brazil, though signing the treaty can positively affect our image internationally.;;;;;;;;;;;;;x
+EVTNAME8220;The García Ortiz-Mangabeira Treaty;;;;;;;;;;;;;x
+EVTOPTA8220;Let this be a sign of friendship and cooperation between our countries.;;;;;;;;;;;;;x
+EVTOPTB8220;We will never cede an inch of $COUNTRY_ADJ$ territory.;;;;;;;;;;;;;x
 EVTNAME8301;The Slavery Question;;;;;;;;;;;;;x
 EVTDESC8301;Slavery have been an contenduous topic for a good while. The country is heavily dependent on slave work and the aristocracy may not like the idea of losing it's free labor. We need to examine the current status of the country before proceeding with abolition.;;;;;;;;;;;;;x
 EVTOPTA8301;We are not yet ready.;;;;;;;;;;;;;x
