--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1057,6 +1057,10 @@ EVTDESC8220;Ever since our declaration of independence, our borders with the nei
 EVTNAME8220;The García Ortiz-Mangabeira Treaty;;;;;;;;;;;;;x
 EVTOPTA8220;Let this be a sign of friendship and cooperation between our countries.;;;;;;;;;;;;;x
 EVTOPTB8220;We will never cede an inch of $COUNTRY_ADJ$ territory.;;;;;;;;;;;;;x
+EVTDESC8221;The $FROMCOUNTRY_ADJ$ government is holding talks in the Brazilian city of Petrópolis to end tensions over the territory known as Acre. Claimed by multiple countries and without a clear border demarcation, several incursions of foreigners from neighbouring countries searching for rubber sparked a few incidents and the de facto owner of the territory, $COUNTRY$, is now offering us monetary compensation, a friendship treaty as well as the possibility of funding a railway construction in our country in exchange for us dropping any claims we have over the area.;;;;;;;;;;;;;x
+EVTNAME8221;The Treaty of Petrópolis;;;;;;;;;;;;;x
+EVTOPTA8221;Sounds like a good deal, we agree.;;;;;;;;;;;;;x
+EVTOPTB8221;No, Acre is a rightful part of $COUNTRY$.;;;;;;;;;;;;;x
 EVTNAME8301;The Slavery Question;;;;;;;;;;;;;x
 EVTDESC8301;Slavery have been an contenduous topic for a good while. The country is heavily dependent on slave work and the aristocracy may not like the idea of losing it's free labor. We need to examine the current status of the country before proceeding with abolition.;;;;;;;;;;;;;x
 EVTOPTA8301;We are not yet ready.;;;;;;;;;;;;;x
