Secret theocracy brazil path

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1148,3 +1148,24 @@ EVTOPTB8425;Side with the white officers and punish the crews.;;;;;;;;;;;;;x
 EVTDESC8430;A political power dispute arose in the heart of the elite class, which was reflected in Maranhão by the opposition of liberals and conservatives. When Pedro de Araújo Lima became prime minister, provoking the so-called conservative regression, the Maranhão conservatives took advantage of the opportunity to remove the liberals in power and weaken them further by contracting the service of the cattle ranchers, traditionally supported by the liberals. The event which began the revolt was the detention of the brother of the rancher Gomes, a liberal, by the order of a sub mayor of the town of Manga, a conservative. Contesting the detention of his brother, Gomes, with the support of a contingent of the National Guard, invaded the municipal jail and freed him in $YEAR$, the beginning of a rebellion against the conservative government.;;;;;;;;;;;;;x
 EVTNAME8430;The Balaiada;;;;;;;;;;;;;x
 EVTOPTA8430;Damn liberals.;;;;;;;;;;;;;x
+EVTNAME8435;Antônio Conselheiro;;;;;;;;;;;;;x
+EVTDESC8435;A local preacher in Bahia, Antonio Conselheiro, which believes himself to be a prophet sent by God to help the poor regions of the north east, is gathering a big following and is starting to cause trouble with the local landowners. \n\nAnd, most important, it seems he believes the republic is work of the antichrist, and is doomed to fail.;;;;;;;;;;;;;x
+EVTOPTA8435;A crazy old man!;;;;;;;;;;;;;x
+EVTOPTB8435;Antichrist??;;;;;;;;;;;;;x
+EVTNAME8436;The Arraial dos Canudos Resists!;;;;;;;;;;;;;x
+EVTDESC8436;Antônio Conselheiro and his followers continue to cause trouble in Bahia! They actually amassed a following of more than 20 thousand people! Not only that, but they managed to repel the provincial forces, repeling two to crush their little town, the state is powerless and asks for the federal troops to intervene. This is extremely troubleful as those rebels are open pro monarchy.;;;;;;;;;;;;;x
+EVTOPTA8436;Send in the federal brigades!;;;;;;;;;;;;;x
+EVTNAME8437;The Arraial dos Canudos Resists Again!;;;;;;;;;;;;;x
+EVTDESC8437;Somehow, against all odds, the Canudos pushed back the first federal expedition into their territory.\n\n\ This is a massive blunder from the army, they went in way too over confident, and end up ambushed in between the mountainous terrain. And to make matters worse, colonel Moreira César, who was considered a war hero for his work against previous revolts, died in the ambush.;;;;;;;;;;;;;x
+EVTOPTA8437;Outrageous! Send in another bigger expendition to crush the monarchist scum!;;;;;;;;;;;;;x
+EVTOPTA8437;Impossible... This maybe a signal from above...;;;;;;;;;;;;;x
+EVTNAME8439;The Arraial dos Canudos have been crushed!;;;;;;;;;;;;;x
+EVTDESC8439;After a long fought batter, the Arraial dos Canudos was finally defeated, and Antônio Conselheiro is dead. Honestly, this was a massive mistake from the army, their second expedition was troubled with supply problems and once again they were over confident, but even so, they won by the end, Conselheiro wasn't even killed, it seems he died from disease way before, which probably weakened the rebel's will to fight.;;;;;;;;;;;;;x
+EVTOPTA8439;It's over anyway;;;;;;;;;;;;;x
+EVTNAME8440;Antônio Conselheiro is right.;;;;;;;;;;;;;x
+EVTDESC8440;Antônio Conselheiro is right. \n\n Not only they fought off the federal army, but proved themselves to be blessed by the heavens above. This can only mean one thing: Antônio Conselheiro is right, the republic is the work of the antichrist! We should go back to our ways, and govern the country the way God intended: State and the Church as the same body.;;;;;;;;;;;;;x
+EVTOPTA8440;It's over anyway;;;;;;;;;;;;;x
+
+
+
+
