--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -207,6 +207,8 @@ call_ally_cooldown;Call ally on cooldown!;;;;;;;;;;;;;x
 camillo_cavour;Camillo Cavour;;;;;;;;;;;;;x
 camillo_cavour_desc;Our excellent minister is leading our nation in the right way. Modernity is now at our doorstep. Huzzah!;;;;;;;;;;;;;x
 canton_system;The Cohong;;;;;;;;;;;;;x
+canudos;Canudos;;;;;;;;;;;;;x
+canudos_desc;A mass of anti republic rebels following a local preacher, Antonio Conselheiro, which believes himself to be a prophet sent by God.;;;;;;;;;;;;;x
 capital_health_care;Local Capital Healthcare;;;;;;;;;;;;;x
 carlist_sympathies;Carlist Sympathies;;;;;;;;;;;;;x
 carlist_sympathies_desc;A Carlist cell is at work in the province, and is quickly gaining sympathy for the rebels that wish to topple the Spanish government.;;;;;;;;;;;;;x
@@ -1181,6 +1183,8 @@ slavery_timer;Slavery timer;;;;;;;;;;;;;x
 slavery_timer_desc;This is a timer for slavery.;;;;;;;;;;;;;x
 slavery_action_cooldown;Slavery Action Cooldown;;;;;;;;;;;;;x
 slavery_action_cooldown_desc;We have recently taken vast measures regarding slavery, doing another big move now would be extremely detrimental.;;;;;;;;;;;;;x
+abolition_tensions;Abolition Tensions;;;;;;;;;;;;;x
+abolition_tensions_desc;We started to make moves towards abolition. This will cause contention from the upper slave owner stratas.;;;;;;;;;;;;;x
 slightly_damaged_city;Slightly Damaged City;;;;;;;;;;;;;x
 slightly_damaged_city_desc;A terrible disaster affected this city! Thankfully our government enacted some measures to help the population.;;;;;;;;;;;;;x
 slow_down_progress;Reform Restrictions;;;;;;;;;;;;;x
