--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1164,8 +1164,4 @@ EVTDESC8439;After a long fought batter, the Arraial dos Canudos was finally defe
 EVTOPTA8439;It's over anyway;;;;;;;;;;;;;x
 EVTNAME8440;Antônio Conselheiro is right.;;;;;;;;;;;;;x
 EVTDESC8440;Antônio Conselheiro is right. \n\n Not only they fought off the federal army, but proved themselves to be blessed by the heavens above. This can only mean one thing: Antônio Conselheiro is right, the republic is the work of the antichrist! We should go back to our ways, and govern the country the way God intended: State and the Church as the same body.;;;;;;;;;;;;;x
-EVTOPTA8440;It's over anyway;;;;;;;;;;;;;x
-
-
-
-
+EVTOPTA8440;And so we go, the way God intended.;;;;;;;;;;;;;x
